<resources>
    <string name="app_name">"ASI"</string>
    <string name="CFBundleDisplayName">"ASI"</string>
    <string name="loading_view_reload">"Reload"</string>
    <string name="loading_view_error_title">"Error"</string>
    <string name="force_update_title">"Update required"</string>
    <string name="inform_continue_button">"Continue"</string>
    <string name="inform_send_button_title">"Send anonymous report"</string>
    <string name="inform_send_thankyou">"Thank you"</string>
    <string name="inform_send_thankyou_text">"You have reported your positive test anonymously via the app.

Thank you for helping to contain the spread of the coronavirus."</string>
    <string name="inform_fertig_button_title">"Close"</string>
    <string name="handshakes_title_homescreen">"Encounters"</string>
    <string name="cancel">"Cancel"</string>
    <string name="push_exposed_title">"New message"</string>
    <string name="push_exposed_text">"Open the app to read the message"</string>
    <string name="android_button_ok">"OK"</string>
    <string name="onboarding_continue_button">"Continue"</string>
    <string name="onboarding_finish_button">"Finish"</string>
    <string name="unexpected_error_title">"An unexpected error has occurred"</string>
    <string name="bluetooth_turned_off">"The app is not working because Bluetooth is turned off"</string>
    <string name="bluetooth_permission_turned_off">"The app is not working because Bluetooth is not permitted"</string>
    <string name="NSBluetoothPeripheralUsageDescription">"Encounters will be recognised in the background via low energy Bluetooth."</string>
    <string name="NSBluetoothAlwaysUsageDescription">"Encounters will be recognised in the background via low energy Bluetooth."</string>
    <string name="android_foreground_service_notification_text">"Encounters will be registered anonymously on your device."</string>
    <string name="inform_code_title">"Covidcode generated"</string>
    <string name="inform_code_text">"Give the code to a healthcare operator. Wait for the healthcare operator to confirm. To continue, press the button."</string>
    <string name="inform_code_no_code">"Do you need help?"</string>
    <string name="tracing_setting_title">"Tracing"</string>
    <string name="tracing_setting_text">"Allow anonymous tracing"</string>
    <string name="bluetooth_setting_tracking_inactive">"Tracing deactivated"</string>
    <string name="reports_title_homescreen">"Reports"</string>
    <string name="meldungen_no_meldungen_title">"No reports"</string>
    <string name="push_deactivated_title">"Messages deactivated"</string>
    <string name="push_deactivated_text">"Change the settings to receive information directly in the event of a report."</string>
    <string name="meldungen_meldung_title">"Possible infection"</string>
    <string name="meldungen_meldung_text">"An infection is suspected."</string>
    <string name="tracing_active_title">"Tracing active"</string>
    <string name="tracing_active_text">"Encounters will be registered anonymously."</string>
    <string name="android_tracing_error_title">"Tracing not active"</string>
    <string name="android_foreground_service_notification_errors">"App currently unable to function properly"</string>
    <string name="preview_warning_title">"Version preview"</string>
    <string name="preview_warning_text">"This app provides a preview of how the DP-3T works. It is not a functioning COVID-19 tracker."</string>
    <string name="debug_settings_title">"Debug settings"</string>
    <string name="debug_state_setting_title">"Overwrite app status"</string>
    <string name="debug_state_setting_text">"This setting overwrites the app's visual status. Tracing functionality remains unaffected."</string>
    <string name="debug_state_setting_option_none">"No overwrite"</string>
    <string name="debug_state_setting_option_ok">"Healthy"</string>
    <string name="debug_state_setting_option_exposed">"Contact has tested positive"</string>
    <string name="debug_state_setting_option_infected">"Reported yourself as positive"</string>
    <string name="debug_sdk_state_title">"SDK status"</string>
    <string name="debug_sdk_state_text">"Current status of DP-3T SDK"</string>
    <string name="debug_sdk_state_last_synced">"Last synchronisation"</string>
    <string name="debug_sdk_state_self_exposed">"Reported yourself"</string>
    <string name="debug_sdk_state_contact_exposed">"Contact reported"</string>
    <string name="debug_sdk_state_boolean_true">"Yes"</string>
    <string name="debug_sdk_state_boolean_false">"No"</string>
    <string name="debug_sdk_button_reset">"Reset SDK"</string>
    <string name="tab_tracing_title">"Tracing"</string>
    <string name="whattodo_title_symptoms">"Symptoms of the disease"</string>
    <string name="whattodo_subtitle_symptoms">"What to do if …"</string>
    <string name="whattodo_title_positivetest">"you test positive"</string>
    <string name="whattodo_subtitle_positivetest">"What to do if …"</string>
    <string name="inform_detail_subtitle">"What to do if …"</string>
    <string name="inform_detail_title">"you test positive?"</string>
    <string name="inform_detail_box_subtitle">"With the Covidcode"</string>
    <string name="inform_detail_box_title">"Send an anonymous report"</string>
    <string name="inform_detail_box_button">"Enter the Covidcode"</string>
    <string name="inform_detail_box_text">"Use the Covidcode sent to you to report the test anonymously in the app."</string>
    <string name="symptom_detail_subtitle">"What do I do if …"</string>
    <string name="symptom_detail_title">"I feel ill?"</string>
    <string name="symptom_detail_box_subtitle">"In the case of symptoms ..."</string>
    <string name="symptom_detail_box_title">"Contact your doctor"</string>
    <string name="symptom_detail_box_button">"To the coronavirus check"</string>
    <string name="symptom_detail_box_text">"If you have possible coronavirus symptoms, contact your doctor or the medical emergency service."</string>
    <string name="inform_detail_navigation_title">"Tested positive"</string>
    <string name="symptom_detail_navigation_title">"Symptoms"</string>
    <string name="tracing_turned_off_title">"Tracing deactivated"</string>
    <string name="tracing_turned_off_text">"Activate tracing so that the app works."</string>
    <string name="bluetooth_turned_off_title">"Bluetooth off"</string>
    <string name="bluetooth_turned_off_text">"Turn on Bluetooth on your device so that anonymous tracing works."</string>
    <string name="bluetooth_turn_on_button_title">"Turn on Bluetooth"</string>
    <string name="bluetooth_permission_error_title">"Bluetooth use declined"</string>
    <string name="bluetooth_permission_error_text">"Enable the use of Bluetooth so that anonymous tracing works."</string>
    <string name="symptom_detail_corona_check_url">"https://check.foph-coronavirus.ch/screening"</string>
    <string name="push_open_settings_button">"Change settings"</string>
    <string name="meldungen_no_meldungen_subtitle">"No potential infections have been reported"</string>
    <string name="no_meldungen_box_title">"Protect yourself"</string>
    <string name="no_meldungen_box_subtitle">"What should I do?"</string>
    <string name="no_meldungen_box_text">"Follow the government recommendations on hygiene and social distancing."</string>
    <string name="meldung_detail_positive_tested_title">"Tested positive"</string>
    <string name="meldung_detail_positive_tested_subtitle">"You have tested positive for the new coronavirus."</string>
    <string name="meldung_detail_positive_test_box_subtitle">"1. Hola"</string>
    <string name="meldung_detail_positive_test_box_subtitle2">"2. ¿Qué hacer por ahora?"</string>
    <string name="meldung_detail_positive_test_box_subtitle3">"3. ¿Presentas dificultad al respirar?"</string>
    <string name="meldung_detail_positive_test_box_subtitle4">"4. Durante tu aislamiento"</string>
    <string name="meldung_detail_positive_test_box_subtitle5">"5. Recomendaciones generales"</string>
    <string name="meldung_detail_positive_test_box_title">"Self-isolation"</string>
    <string name="meldung_detail_positive_test_box_text">"Gracias por compartir tu información y ayudarnos a proteger a nuestras familias. Has sido confirmado como un caso positivo de COVID-19.  Recuerda que 8 de cada 10 personas con COVID-19 mejorarán con reposo en casa, sin necesidad de asistir a un establecimiento de salud, y con la medicación prescrita por un médico."</string>
    <string name="meldung_detail_positive_test_box_text2">"Debes mantenerte en aislamiento por 14 días. Sé responsable y protege tu salud y la de las personas que te rodean, así se evitarán más contagios.
        \nPuedes no presentar síntomas y aun así contagiar a otras personas de COVID-19. Para evitar la propagación del virus dentro de tu casa toma las siguientes medidas:"</string>
    <string name="meldung_detail_positive_test_box_text3">"En caso de que presentes problemas para respirar, comunícate en forma inmediata con el 911 o acude al centro de atención médica más cercano, utilizando mascarilla.  Aquí podrás encontrar información sobre los centros cercanos a tu ubicación: \nhttps://geosalud.msp.gob.ec/geovisualizador/"</string>
    <string name="meldung_detail_positive_test_box_text4">"El personal de salud del MSP mantendrá una comunicación permanente contigo para evaluar tu estado de salud."</string>
    <string name="meldung_detail_positive_test_box_text5">""</string>
    <string name="tracing_ended_title">"Tracing ended"</string>
    <string name="onboarding_good_to_know">"Good to know"</string>
    <string name="android_accessibility_back_button">"Back"</string>
    <string name="onboarding_gaen_title">"Activate tracing"</string>
    <string name="onboarding_gaen_text">"COVID-19 Notifications must be activated to use the app."</string>
    <string name="onboarding_gaen_button_activate">"Activate"</string>
    <string name="onboarding_gaen_info_title_1">"You remain anonymous"</string>
    <string name="onboarding_gaen_info_text_1">"Only anonymous IDs are exchanged, not data about your location or your person."</string>
    <string name="triage_toolbar_title">"Symptom Monitor"</string>
    <string name="triage_userdata_genre_section_text">"About you"</string>
    <string name="triage_userdata_genre_description_text">"Your genre"</string>
    <string name="triage_userdata_genre_female_rbtn">"Female"</string>
    <string name="triage_userdata_genre_male_rbtn">"Male"</string>
    <string name="triage_userdata_genre_unset_rbtn">"Rather not to mention"</string>
    <string name="triage_userdata_age_selector_section_text">"Your age range:"</string>
    <string name="triage_userdata_age_selector_description_text">"Select your age range"</string>
    <string name="triage_userdata_parish_selector_section_text">"Your parish:"</string>
    <string name="triage_userdata_parish_selector_description_text">"Canton - Parish"</string>
    <string name="triage_userdata_age_spinner_prompt">"Select your age range"</string>
    <string name="triage_finished_subtitle">"Gracias"</string>
    <string name="triage_finished_text1">"Estos síntomas son compatibles con los síntomas del Coronavirus. Recuerde que 8 de 10 personas con COVID-19 se mejorarán en casa y medicina sin necesidad de prescripción."</string>
    <string name="triage_finished_text2">"¿Qué hacer después?"</string>
    <string name="triage_finished_text3">"Mantente en autoaislamiento para proteger al resto.\n
Comienza por leer estos consejos del MSP después llama a tu Doctor para informar de tus síntomas.\n
si tienes alguna condición medica es probable que tengas un riesgo mayor, es posible que el MSP te pida que te hagas una prueba PCR."</string>
    <string name="triage_finished_seemore_btn">"Leer más consejos del MSP"</string>
    <string name="triage_finished_gotohistory_btn">"Ver mi historial de síntomas"</string>
</resources>