<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Ubique Innovation AG <https://www.ubique.ch>
  ~
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
  ~
  ~ SPDX-License-Identifier: MPL-2.0
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

<ScrollView
	android:layout_width="match_parent"
	android:layout_height="0dp"
	android:layout_weight="1">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white"
		android:clipChildren="false"
		android:clipToPadding="false"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		android:paddingTop="@dimen/spacing_huge">

		<ImageView
			android:layout_width="match_parent"
			android:layout_height="@dimen/illustration_height"
			android:paddingStart="@dimen/spacing_huge"
			android:paddingEnd="@dimen/spacing_huge"
			android:scaleType="fitCenter"
			android:src="@drawable/ill_onboarding_gapple" />

		<TextView
			android:id="@+id/onboarding_title"
			style="@style/NextStep.Text.Title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/spacing_medium"
			android:layout_marginBottom="@dimen/spacing_large"
			android:gravity="center_horizontal"
			android:paddingStart="@dimen/spacing_huge"
			android:paddingEnd="@dimen/spacing_huge"
			android:text="@string/onboarding_gaen_title" />

		<TextView
			android:id="@+id/onboarding_description"
			style="@style/NextStep.Text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:paddingStart="@dimen/spacing_huge"
			android:paddingEnd="@dimen/spacing_huge"
			android:text="@string/onboarding_gaen_text" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/spacing_large"
			android:orientation="vertical"
			android:paddingStart="@dimen/spacing_large"
			android:paddingTop="@dimen/spacing_medium_large"
			android:paddingEnd="@dimen/spacing_large"
			android:paddingBottom="@dimen/spacing_huge">

			<TextView
				style="@style/NextStep.Text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/spacing_large"
				android:text="@string/onboarding_good_to_know" />

			<TextView
				style="@style/NextStep.Text.Bold"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/spacing_small"
				android:text="@string/onboarding_gaen_info_title_1" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<ImageView
					android:layout_width="@dimen/icon_size"
					android:layout_height="@dimen/icon_size"
					android:layout_marginRight="@dimen/spacing_medium_large"
					android:src="@drawable/ic_lock"
					android:tint="@color/blue_main" />

				<TextView
					style="@style/NextStep.Text"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:breakStrategy="high_quality"
					android:hyphenationFrequency="full"
					android:text="@string/onboarding_gaen_info_text_1" />

			</LinearLayout>

		</LinearLayout>

		<Button
			android:id="@+id/onboarding_gaen_button"
			style="@style/NextStep.Button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginBottom="@dimen/spacing_very_large"
			android:text="@string/onboarding_gaen_button_activate" />



	</LinearLayout>
</ScrollView>

	<Button
		android:id="@+id/onboarding_gaen_continue_button"
		style="@style/NextStep.Button.Transparent.Blue"
		android:layout_width="match_parent"
		android:layout_height="@dimen/onboarding_continue_button_height"
		android:layout_gravity="bottom"
		android:background="@color/white"
		android:foreground="?android:selectableItemBackground"
		android:layout_marginTop="@dimen/spacing_small"
		android:elevation="@dimen/card_elevation"
		android:text="@string/onboarding_continue_button"
		android:visibility="gone" />
</LinearLayout>