<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/NextStep.Card.Triage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/triage_userdata_genre_section_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/triage_userdata_genre_section_text"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/triage_userdata_genre_description_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/triage_userdata_genre_description_text"
                app:layout_constraintEnd_toEndOf="@+id/triage_userdata_genre_section_text"
                app:layout_constraintStart_toStartOf="@+id/triage_userdata_genre_section_text"
                app:layout_constraintTop_toBottomOf="@+id/triage_userdata_genre_section_text" />

            <RadioGroup
                android:id="@+id/triage_userdata_genre_rgroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checkedButton="@id/triage_userdata_genre_unset_rbtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/triage_userdata_genre_description_text">

                <RadioButton
                    android:id="@+id/triage_userdata_genre_female_rbtn"
                    style="@style/NextStep.RadioButton.Triage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/triage_userdata_genre_female_rbtn" />

                <RadioButton
                    android:id="@+id/triage_userdata_genre_male_rbtn"
                    style="@style/NextStep.RadioButton.Triage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/triage_userdata_genre_male_rbtn" />

                <RadioButton
                    android:id="@+id/triage_userdata_genre_unset_rbtn"
                    style="@style/NextStep.RadioButton.Triage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/triage_userdata_genre_unset_rbtn" />
            </RadioGroup>

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/grey_light_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/triage_userdata_genre_rgroup" />


            <Spinner
                android:id="@+id/triage_userdata_age_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="PILAS"
                android:entries="@array/triage_age_spinner_labels"
                android:prompt="@string/triage_userdata_age_spinner_prompt"
                android:spinnerMode="dialog"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/triage_userdata_age_selector_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view">

                <TextView
                    android:id="@+id/triage_userdata_age_selector_section_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/triage_userdata_age_selector_section_text"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/triage_userdata_age_selector_description_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/triage_userdata_age_selector_description_text"
                    app:layout_constraintEnd_toEndOf="@+id/triage_userdata_age_selector_section_text"
                    app:layout_constraintStart_toStartOf="@+id/triage_userdata_age_selector_section_text"
                    app:layout_constraintTop_toBottomOf="@+id/triage_userdata_age_selector_section_text" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chevron_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_chevron_right" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <View
                android:visibility="gone"
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/grey_light_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/triage_userdata_age_selector_container" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:visibility="gone"
                android:id="@+id/triage_userdata_parish_selector_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2">

                <TextView
                    android:id="@+id/triage_userdata_parish_selector_section_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/triage_userdata_parish_selector_section_text"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/triage_userdata_parish_selector_description_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/triage_userdata_parish_selector_description_text"
                    app:layout_constraintEnd_toEndOf="@+id/triage_userdata_parish_selector_section_text"
                    app:layout_constraintStart_toStartOf="@+id/triage_userdata_parish_selector_section_text"
                    app:layout_constraintTop_toBottomOf="@+id/triage_userdata_parish_selector_section_text" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chevron_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_chevron_right" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/view3"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/grey_light_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/triage_userdata_parish_selector_container" />

            <Button
                android:id="@+id/triage_userdata_continue_btn"
                style="@style/NextStep.Button.Blue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/onboarding_continue_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</ScrollView>